# mcp-grafana

./: .dockerignore  .gitignore  .goreleaser.yaml  CODEOWNERS  Dockerfile  Makefile  README.md  client.go  docker-compose.yaml  go.mod  go.sum  go.tools.mod  go.tools.sum  mcpgrafana.go  mcpgrafana_test.go  pyproject.toml  tools.go  tools_test.go
.github/workflows/: build-image.yml  cloud.yml  go.yml  python.yml  release.yml  test.yml
cmd/: main.go
cmd/mcp-grafana/: main.go
src/mcp_grafana/: __init__.py  cli.py  client.py  grafana_types.py  settings.py  types.py
src/mcp_grafana/tools/: __init__.py  datasources.py  incident.py  prometheus.py  search.py
testdata/provisioning/alerting/: alert_rules.yaml
testdata/provisioning/datasources/: datasources.yaml
tests/: conftest.py  grafana_types_test.py  loki-config.yml  prometheus.yml  promtail-config.yml  settings_test.py
tests/dashboards/: demo.json
tests/provisioning/datasources/: datasources.yaml
tests/tools/: __init__.py  datasources_test.py  incident_test.py  prometheus_test.py  search_test.py
tools/: alerting.go  alerting_test.go  dashboard.go  dashboard_test.go  datasources.go  datasources_test.go  incident.go  incident_integration_test.go  incident_test.go  loki.go  loki_test.go  oncall.go  oncall_cloud_test.go  prometheus.go  prometheus_test.go  search.go  search_test.go
