[project]
name = "mcp-grafana"
version = "0.1.0"
description = "MCP server for Grafana and the ecosystem"
readme = "README.md"
authors = [
    { name = "Ben Sully", email = "ben.sully@grafana.com" }
]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "mcp==1.2.0rc1",
    "pydantic-settings>=2.7.0",
    "pydantic>=2.10.4",
]

[dependency-groups]
cli = [
    "mcp[cli]==1.2.0rc1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
