[project]
name = "mcp-grafana"
version = "0.1.0"
description = "MCP server for Grafana and the ecosystem"
readme = "README.md"
authors = [
    { name = "Ben Sully", email = "ben.sully@grafana.com" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp==1.2.0rc1",
    "pydantic-settings>=2.7.0",
    "pydantic>=2.10.4",
]

[project.scripts]
mcp-grafana = "mcp_grafana.cli:app"

[dependency-groups]
cli = [
    "mcp[cli]==1.2.0rc1",
    "typer>=0.15.1",
]
dev = [
    "pytest>=8.3.4",
]
lint = [
    "ruff>=0.8.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
