[project]
name = "mcp-grafana"
version = "0.1.0"
description = "MCP server for Grafana and the ecosystem"
readme = "README.md"
authors = [
    { name = "Ben Sully", email = "ben.sully@grafana.com" }
]
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]==1.2.0",
    "pydantic-settings>=2.7.0",
    "pydantic>=2.10.4",
    "typer>=0.15.1",
]

[project.scripts]
mcp-grafana = "mcp_grafana.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
]
lint = [
    "ruff>=0.8.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"
publish-url = "https://pypi.org/legacy/"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
